# cwhelper

./: Cargo.toml  README.md  justfile
src/: lexicon.rs  lib.rs  main.rs  words.rs
src/lexicon/: character_normalization.rs  indexed.rs  simple.rs  words.rs
static/: index.html  index_en.html
